# familywise

./: .env  .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml
api/lib/: Cargo.toml
api/lib/src/: configuration.rs  error.rs  health.rs  lib.rs  state.rs  utils.rs
api/lib/src/interface/: user.rs
api/shuttle/: Cargo.toml
api/shuttle/migrations/: 20231104234854_schema.sql
api/shuttle/src/: main.rs
api/shuttle/tests/api/: health.rs  health_local.rs  helpers.rs  integration.rs  main.rs  user.rs
front/: Cargo.toml  Dioxus.toml  tailwind.config.js
front/public/: tailwind.css
front/src/: error.rs  lib.rs  main.rs  nav.rs
front/src/components/: button.rs  card.rs  dark_mode.rs  environment.rs  footer.rs  guest_card.rs  guest_form.rs  header.rs  home_tile.rs  menu.rs  mod.rs  parent.rs  screen.rs  status.rs  theme.rs  user_card.rs  user_form.rs
front/src/pages/: home.rs  login.rs  mod.rs  not_found.rs  route.rs
shared/: Cargo.toml
shared/src/: error.rs  guest.rs  lib.rs
shared/src/models/: mod.rs  user.rs
