[package]
name = "front"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "familywise_client"

[dependencies]
dioxus.workspace = true
dioxus-router.workspace = true
dioxus-web.workspace = true
log.workspace = true
prefers-color-scheme.workspace = true
reqwest.workspace = true
shared = { path = "../shared" }
thiserror.workspace = true
tracing.workspace = true
wasm-logger.workspace = true
web-sys.workspace = true
