[package]
name = "front"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "familywise_client"

[dependencies]
# cordial = { git = "https://github.com/crumplecup/cordial.git", default-features = false, features = ["uuid"] }
cordial_guest = { git = "https://github.com/crumplecup/cordial.git" }
dioxus.workspace = true
dioxus-router.workspace = true
dioxus-web.workspace = true
log.workspace = true
polite = { git = "https://github.com/crumplecup/cordial.git", default-features = false, features = ["req"] }
prefers-color-scheme.workspace = true
reqwest.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
thiserror.workspace = true
tracing.workspace = true
wasm-logger.workspace = true
web-sys.workspace = true
uuid.workspace = true
instant.workspace = true
gloo-timers = "0.3.0"
wasmtimer = "0.2.0"
