[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.worspace = true
uuid = { workspace = true, features = ["serde"] }

[features]
backend = ["sqlx"]

