[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
dotenvy.workspace = true 
names.workspace = true
nom.workspace = true 
passwords.workspace = true
secrecy.workspace = true 
serde.workspace = true 
serde-aux.workspace = true 
serde_json.workspace = true 
shared = { path = "../../shared", features = ["backend"] }
sqlx = { workspace = true }
thiserror.workspace = true
tower-http.workspace = true 
tracing = { workspace = true }
uuid = { workspace = true }
