[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-server.workspace = true 
cordial = { git = "https://github.com/crumplecup/cordial.git" }
fake.workspace = true 
reqwest.workspace = true
shared = { path = "../../shared", features = ["backend"] }
shuttle-axum = { workspace = true }
shuttle-runtime = { workspace = true }
shuttle-secrets = { workspace = true }
shuttle-shared-db = { workspace = true }
secrecy.workspace = true
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hyper = "0.14.27"
tower = { version = "0.4.13", features = ["tracing", "tokio"] }
mime = "0.3.17"
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
hyper-http-connector = "0.1.0"
polite = { git = "https://github.com/crumplecup/cordial.git", default-features = false, features = ["serial", "sql", "hype"] }
http-body-util = "0.1.0"

